[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://scripts/ui/map_ui.gd" id="1"]

[sub_resource type="StyleBoxFlat" id="1"]
bg_color = Color(0.1, 0.1, 0.15, 0.95)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_left = 8
corner_radius_bottom_right = 8
border_width_left = 2
border_width_right = 2
border_width_top = 2
border_width_bottom = 2
border_color = Color(0.3, 0.3, 0.4, 1)

[node name="MapUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("1")

[node name="ActLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -150.0
offset_top = 20.0
offset_right = 150.0
offset_bottom = 60.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 0.85, 0.4, 1)
theme_override_font_sizes/font_size = 24
text = "Act 1: Verdant Grove"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 70.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
horizontal_scroll_mode = 0

[node name="MapContainer" type="Control" parent="ScrollContainer"]
custom_minimum_size = Vector2(500, 1200)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PathDrawer" type="Node2D" parent="ScrollContainer/MapContainer"]

[node name="NodesContainer" type="Control" parent="ScrollContainer/MapContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PlayerMarker" type="TextureRect" parent="ScrollContainer/MapContainer"]
visible = false
offset_right = 32.0
offset_bottom = 32.0
